--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "text-to-handwriting",
   "version": "1.0.0-rc.1",
@@ -33,6 +32,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "husky": "^4.2.5",
+    "lint-staged": "^13.0.4",
     "prettier": "^2.0.5",
     "serve": "^11.3.2"
   },
